# Bark-Voice-Cloning

./: AI_Agent.ipynb  Bark_Coqui.ipynb  Bark_Voice_Cloning.ipynb  Bark_Voice_Cloning_UI.ipynb  ChatGLM2_linghua_VITS2.ipynb  CosyVoice.ipynb  CosyVoice2.ipynb  Dockerfile (1).txt  F5_TTS.ipynb  F5_TTS_Training.ipynb  GPT_SoVITS.ipynb  GPT_SoVITS_2.ipynb  GPT_SoVITS_emo.ipynb  GPT_SoVITS_v2_0808.ipynb  GPT_SoVITS_v3.ipynb  GPT_SoVITS_v3_03_30.ipynb  GPT_SoVITS_v4.ipynb  KNN_VC.ipynb  MuseTalk.ipynb  MuseV.ipynb  NeuCoSVC.ipynb  NeuCoSVC_v2_先享版.ipynb  OpenAI_TTS_KNN_VC.ipynb  OpenAI_TTS_KNN_VC_en.ipynb  OpenAI_TTS_RVC.ipynb  OpenVoice.ipynb  README.md  README_CN.md  README_zh.md  SambertHifigan.ipynb  Sambert_UI.ipynb  Sambert_Voice_Cloning_in_One_Click.ipynb  Sambert中文声音克隆v2.ipynb  Seamless_M4T_Meta.ipynb  Seamless_Meta.ipynb  VALL_E_X.ipynb  Voice_Cloning_for_Chinese.ipynb  Voice_Cloning_for_Chinese_Speech.ipynb  Voice_Cloning_for_Chinese_Speech_v2.ipynb  XTTS_Colab.ipynb  (+11 more)
bark/: api.py  generation.py  settings.py
cloning/: clonevoice.py
notebooks/: AI_Agent.ipynb  ChatGLM2_linghua_VITS2.ipynb  CosyVoice.ipynb  GPT_SoVITS.ipynb  GPT_SoVITS_2.ipynb  GPT_SoVITS_emo.ipynb  GPT_SoVITS_v2_0808.ipynb  KNN_VC.ipynb  MuseTalk.ipynb  MuseV.ipynb  NeuCoSVC.ipynb  NeuCoSVC_v2_先享版.ipynb  OpenAI_TTS_KNN_VC.ipynb  OpenAI_TTS_KNN_VC_en.ipynb  OpenAI_TTS_RVC.ipynb  OpenVoice.ipynb  README.md  Seamless_M4T_Meta.ipynb  Seamless_Meta.ipynb  train.json  train_linghua_new_v3.json
sambert-ui/: README.md  Sambert_UI.ipynb  app.py  app_colab.py  consts.py  requirements.txt  utils_base.py  (+2 more)
(+23 files in other folders)
